# pgmagick

./: .gitignore  .hgignore  .travis.yml  CHANGELOG  LICENSE  MANIFEST.in  Makefile  README.rst  THANKS  _FilterTypes.cpp  _main.cpp  pyproject.toml  setup.py
benchmark/: imagescale_benchmark.py
docs/: Makefile  api.rst  conf.py  cookbook.rst  index.rst  tutorial.rst
example/: bezier.py  blob.py  draw.py  drawablelist.py  gm.sh  gradient.py  gravity.py  im.sh  image_from_storage.py  imagelist.py  pgmagick_prof.py  pixels.py  profile.sh  pythonmagick_prof.py  resize.py  writeimages_with_blob.py
pgmagick/: __init__.py  api.py
script/: create_initpy.py
src/: Makefile  _ArrayProxy.h  _Blob.cpp  _ChannelType.cpp  _Color.cpp  _ColorspaceType.cpp  _CompositeOperator.cpp  _CompressionType.cpp  _Coordinate.cpp  _DecorationType.cpp  _DistortImageMethod.cpp  _Drawable.cpp  _DrawableAffine.cpp  _DrawableArc.cpp  _DrawableBezier.cpp  _DrawableCircle.cpp  _DrawableClipPath.cpp  _DrawableColor.cpp  _DrawableCompositeImage.cpp  _DrawableDashArray.cpp  _DrawableDashOffset.cpp  _DrawableEllipse.cpp  _DrawableFillColor.cpp  _DrawableFillOpacity.cpp  _DrawableFillRule.cpp  _DrawableFont.cpp  _DrawableGravity.cpp  _DrawableLine.cpp  _DrawableMatte.cpp  _DrawableMiterLimit.cpp  _DrawablePath.cpp  _DrawablePoint.cpp  _DrawablePointSize.cpp  _DrawablePolygon.cpp  _DrawablePolyline.cpp  _DrawablePopClipPath.cpp  _DrawablePopGraphicContext.cpp  _DrawablePopPattern.cpp  _DrawablePushClipPath.cpp  _DrawablePushGraphicContext.cpp  (+72 more)
test/: Makefile  test_cookbook.py  test_pgmagick_api.py  (+9 more)
(+6 files in other folders)
