[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pgmagick"
dynamic = ["version"]
description = "Yet Another Python wrapper for GraphicsMagick"
readme = "README.rst"
license-files = ["LICENSE"]
authors = [
    {name = "Hideo Hattori", email = "hhatto.jp@gmail.com"}
]
keywords = ["GraphicsMagick", "ImageMagick", "graphics", "boost", "image"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/hhatto/pgmagick"
Repository = "https://github.com/hhatto/pgmagick"

[tool.setuptools.dynamic]
version = {attr = "pgmagick._version.__version__"}

[tool.setuptools.packages.find]
include = ["pgmagick*"]
